<resources>
    <string name="app_name">InstagramClone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile_fragment">edit profile</string>
    <string name="sign_out_fragment">sign out</string>
    <string name="E_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="no_account">No account yet? Create one!</string>
    <string name="please_wait">Please wait…</string>
    <string name="instagram_logo">instagram logo</string>
    <string name="txt_register">REGISTER NEW ACCOUNT</string>
    <string name="full_name">Full Name</string>
    <string name="register">register</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="auth_success">authentication successful</string>
    <string name="emptyField">All the fields must be filled out!</string>
    <string name="dbase_user">users</string>
    <string name="dbase_account_settings">user_account_settings</string>
    <string name="signup_success">Sign up successful. Sending verification e-mail!</string>
    <string name="emailNotSent">Verification  email couldn\'t be sent!</string>
    <string name="emailNotVefied">Email ist not verified! Chech your email inbox!</string>
    <string name="signout_confirmation">Are you sure you want to sign out?</string>
    <string name="sign_out">sign out</string>
    <string name="signing_out">Signing out...</string>
    <string name="fragment_profile">Profile</string>
    <string name="calling_activity">calling_activity</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="field_username">username</string>
    <string name="username_exists">That username already exists!</string>
    <string name="username_saved">Username saved!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
    <string name="change_photo">change photo</string>
    <string name="username">username</string>
    <string name="display_name">display name</string>
    <string name="website">website</string>
    <string name="description">description</string>
    <string name="private_information">PRIVATE INFORMATION</string>
    <string name="phone_number">phone number</string>

</resources>
