<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/change_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:textColor="@color/link"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/ic_username"/>

            <EditText
                android:id="@+id/display_namename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/display_name"
                android:drawableStart="@drawable/ic_display_name"/>

            <EditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_web"
                android:hint="@string/website"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                android:drawableStart="@drawable/ic_discription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_information"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="email"
                android:drawableStart="@drawable/ic_email"/>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_number"
                android:drawableStart="@drawable/ic_phone"/>

        </LinearLayout>

    </ScrollView>

</merge>