<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="350dp"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/confirm_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="4dp"/>
    </RelativeLayout>

</LinearLayout>