<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:id="@+id/linlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="55dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_register"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginBottom="30dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/E_mail"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/full_name"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:padding="12dp"
            android:background="@drawable/white_rounded_border"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/registerProgressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/linlayout"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/txt_pleaseWait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_alignBottom="@+id/registerProgressBar"
        android:layout_alignEnd="@+id/registerProgressBar"
        android:layout_alignStart="@+id/registerProgressBar"/>

</RelativeLayout>