<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout_confirmation"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    <Button
        android:id="@+id/btn_signout"
        android:layout_below="@+id/txt_signout"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_out"
        android:background="@drawable/white_rounded_border"/>

    <ProgressBar
        android:id="@+id/signout_progressbar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:paddingBottom="15dp"
        android:layout_below="@+id/btn_signout"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/txt_signingout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/signing_out"
        android:textSize="16sp"
        android:layout_alignBottom="@+id/signout_progressbar"
        android:layout_alignStart="@+id/signout_progressbar"
        android:layout_alignEnd="@+id/signout_progressbar"/>
</RelativeLayout>